Fixed Differential button to not overlap table header text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,9 +68,6 @@ body {
   left: 300px;
 }
 
-#groupDifferential {
-  text-align: left;
-}
 
 #footer {
   width:100%;
